name:                Tahin
version:             0.1.0.0
synopsis:            Tahin Password Generator
description:         Please see README.md
homepage:            http://github.com/mtesseract/Tahin#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          mtesseract@silverratio.net
copyright:           Moritz Schulte
category:            value
build-type:          Simple
cabal-version:       >=1.10

executable tahin
  hs-source-dirs:      src
  ghc-options:         -Wall
  main-is:             Tahin.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , base64-bytestring >= 1.0.0.1
                     , bytestring >= 0.10.6.0
                     , base16-bytestring
                     , cryptohash
                     , haskeline
